<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2025 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".FilterFragment">

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_tv"
        app:tickColor="@color/light_orange_yellow"
        app:tickVisible="false"
        app:trackColorInactive="@color/light_range_slider_inactive" />

    <TextView
        android:id="@+id/sort_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sort_by"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/rangeSlider"
        app:layout_constraintTop_toBottomOf="@+id/from_tv" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_tv">

        <RadioButton
            android:id="@+id/radioButton1"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_low_to_high" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_high_to_low" />

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newest_first" />

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/Widget.Material3.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oldest_first" />

    </RadioGroup>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:textColor="@android:color/black"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clean_btn"
        app:layout_constraintTop_toTopOf="@+id/clean_btn" />

    <Button
        android:id="@+id/clean_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clear"
        android:textColor="@android:color/black"
        android:textFontWeight="400"
        app:layout_constraintEnd_toStartOf="@+id/apply_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <TextView
        android:id="@+id/from_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="@+id/rangeSlider"
        app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

    <TextView
        android:id="@+id/to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintEnd_toEndOf="@+id/rangeSlider"
        app:layout_constraintTop_toBottomOf="@+id/rangeSlider" />

</androidx.constraintlayout.widget.ConstraintLayout>